DT-2957: Update the API call for getting DAR details for a dataset ID (#2822)
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>